CML : igt@gem_ctx_ringsize@plugged@rcs0 - incomplete - GPU HANG: ecode 9:1:f1973ffc ,GEM_BUG_ON(i915_request_is_active(w))
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_753/fi-cml-drallion/igt@gem_ctx_ringsize@plugged@rcs0.html
Dmesg
<6> [408.683243] Console: switching to colour dummy device 80x25
<6> [408.683722] [IGT] gem_ctx_ringsize: executing
<6> [408.695009] [IGT] gem_ctx_ringsize: starting subtest plugged
<6> [408.695454] [IGT] gem_ctx_ringsize: starting dynamic subtest rcs0
<5> [408.828441] i915 0000:00:02.0: [drm] Resetting rcs0 for CS error
<6> [408.830549] i915 0000:00:02.0: [drm] GPU HANG: ecode 9:1:f1973ffc, in gem_ctx_ringsiz [1224]
<5> [408.831399] i915 0000:00:02.0: [drm] Resetting rcs0 for CS error
<5> [408.832238] i915 0000:00:02.0: [drm] Resetting rcs0 for CS error
<6> [408.834376] i915 0000:00:02.0: [drm] GPU HANG: ecode 9:1:f1973ffc, in gem_ctx_ringsiz [1224]
<6> [408.836311] i915 0000:00:02.0: [drm] GPU HANG: ecode 9:1:f1973ffc, in gem_ctx_ringsiz [1224]
<7> [411.437902] i915 0000:00:02.0: [drm:intel_pps_vdd_off_sync_unlocked [i915]] Turning [ENCODER:94:DDI A/PHY A] VDD off
<7> [411.438556] i915 0000:00:02.0: [drm:intel_pps_vdd_off_sync_unlocked [i915]] PP_STATUS: 0x80000008 PP_CONTROL: 0x00000067
<5> [415.534328] i915 0000:00:02.0: [drm] Resetting rcs0 for preemption time out
<5> [415.534389] i915 0000:00:02.0: [drm] gem_ctx_ringsiz[1224] context reset due to GPU hang
<7> [415.534404] i915 0000:00:02.0: [drm:__i915_request_reset.cold.61 [i915]] client gem_ctx_ringsiz[1224]: gained 1 ban score, now 1
<6> [415.540475] i915 0000:00:02.0: [drm] GPU HANG: ecode 9:1:94bc9494, in gem_ctx_ringsiz [1224]
<3> [417.838362] defer_request:1107 GEM_BUG_ON(i915_request_is_active(w))
<0> [417.839512] Dumping ftrace buffer:
<0> [417.839725] ---------------------------------
<0> [417.840299] CPU:6 [LOST 31833 EVENTS]